--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,9 @@
         "ts": "never",
         "tsx": "never"
       }
-    ]
+    ],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": "off"
   },
   "settings": {
     "import/resolver": {
